--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ html {
 
 body {
   margin: 0;
-  font-size: 10px;
+  font-size: 12px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,6 +14,7 @@ body {
 
 .episode-layout {
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
   min-width: 100vh;
 }
